--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "express-jwt": "^7.4.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.0",
-    "multer": "^1.4.4"
+    "multer": "^1.4.4",
+    "nodemailer": "^6.7.3"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
