--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "express-jwt": "^7.4.2",
     "jsonwebtoken": "^8.5.1",
@@ -24,6 +23,7 @@
   },
   "devDependencies": {
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "dotenv": "^16.0.0"
   }
 }
