sender and reciever email notification done

--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@ API =
 SECRET = 
 
 
-EMAIL_USERNAME = 
-EMAIL_PASSWORD = 
-EMAIL_PORT =
-HOST =
+ADMIN_EMAIL= 
+EMAIL_SERVICE_PROVIDER= 
+MAILER_EMAIL= 
+MAILER_PASSWORD= 
