--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon app.js"
+    "start": "nodemon app.js",
+    "server": "node app.js"
   },
   "type": "module",
   "author": "",
@@ -13,6 +14,7 @@
   "dependencies": {
     "axios": "^0.26.1",
     "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "express-jwt": "^7.4.2",
@@ -22,8 +24,6 @@
     "nodemailer": "^6.7.3"
   },
   "devDependencies": {
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.15",
-    "dotenv": "^16.0.0"
+    "nodemon": "^2.0.15"
   }
 }
